# ChangeLog for net-analyzer/symon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.79-r1.ebuild:
  Improve syweb elog messages by saying how to customize it, and mention that
  there's a no user interaction php script

  06 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -symon-2.79.ebuild,
  +symon-2.79-r1.ebuild:
  Install syweb documentation, remove old

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  symon doesn't use GNU make, hence ignore MAKEOPTS since some options aren't
  available in pmake (e.g. --load-average)

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Tell the user how to test the configuration files, and how the RRDs
  directory structure for syweb should be organized

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Make doins, dodoc, doman, dosbin, and dobin die on failure

  31 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Shorten DESCRIPTION

  21 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Improve elog messages

  16 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Rename 'client' USE flag to 'perl'

  11 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Simplify die messages, while there avoid using identical die messages in the
  same function to ease error identification

  03 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Simplify sed calls

  31 May 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Respect AR and RANLIB, while there beautify the ebuild

  08 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
  Prettify src_compile, virtual/httpd-cgi removed from RDEPEND since it isn't
  needed

  08 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>