@@ -8,5 +8,5 @@ AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf
 DIST symon-2.79.tar.gz 102400 RMD160 693b798cd6c564f4e8b79c62c1776f5b036aaf1a SHA1 a21566f3291baaa39806bec32550d5a28a163213 SHA256 7157b087b99a59f3aba9a02c375fb1b411dc4329463f748d2323c3cdf3d0cd83
 DIST syweb-0.58.tar.gz 40960 RMD160 5dffc149a078789703c1ee10699e8aab350313d7 SHA1 bf0aa3a96533f8d6ae38f5317ae001282510ced4 SHA256 c01dfbc9f069d73d7c92880a0ed05bd7bca3e970ab282c2deb706861af7d6dcf
 EBUILD symon-2.79-r1.ebuild 4214 RMD160 9c6bdbdba515a0d9c2b141cd943332f2e1d90333 SHA1 800fd38c7a794f3aecb866ef5e59cfed0c2e6fb0 SHA256 9779b898c980424a672052577a64edc0866870e74f618e0b7ba0e1ebd9005e87
-MISC ChangeLog 6361 RMD160 0842ad20d604dc5784efb50cd11b335ba439b85a SHA1 da5fd5e4a6f77a1d60ea698e4391ad3d4c1a3ad8 SHA256 09fc0e671a7d317ad9f4645dc36cb4867baf9fe2b60d5fcdb86951f6a51c0b56
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 6483 RMD160 9110e412b06ff4ff8498fa35d35441e979102449 SHA1 acd3b9d43bd74526ae0904d91311efdf76bc722d SHA256 b4926682509f449950ac5c6b0135689a6a5584c7771f95a43a4c373ae983be82
+MISC metadata.xml 460 RMD160 1401409a153f0d98ba307fb3554df7869935760a SHA1 f7bfea7187f15fd8aa05345f719581c32f5f6d86 SHA256 f8f286f8e439163d26488880a5a4536fd25c693c9867a433564d103961c908ae
