@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> metadata.xml:
+  Add USE flag description to metadata wrt GLEP 56
+
   06 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
   symon-2.79-r1.ebuild:
   Improve syweb elog messages by saying how to customize it, and mention that
